tic tac toe grid

--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
    <title>3D TicTacToe!</title>
    <script src='./jquery-3.3.1.min.js'></script>
    <script src='./game.js'></script>
+   <script src='./data.js'></script>
    <link href = './game.css' rel = 'stylesheet' type='text/css'/>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
  </head>
@@ -24,7 +25,6 @@
    </div>
    <hr/>
    <div id='grid-container'>
-     <div id = 'smart-overlay'></div>
    </div>
  </body>
 </html>
